# driving/api-rest/src/main/java/com/centimo/api/mappers/GastoApiMapper.java
@@ -3,6 +3,7 @@ package com.centimo.api.mappers;
 import com.centimo.api.domain.models.Gasto;
 import com.centimo.api.dto.Expense;
 import com.centimo.api.dto.ExpenseCreate;
+import com.centimo.api.dto.ExpenseUpdate;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
@@ -25,4 +26,13 @@ public interface GastoApiMapper {
   @Mapping(target = "descripcion", source = "description")
   @Mapping(target = "fechaCreacion", ignore = true)
   Gasto toDomain(ExpenseCreate expense);
+
+  @Mapping(target = "id", ignore = true)
+  @Mapping(target = "instantaneaId", ignore = true)
+  @Mapping(target = "categoria", source = "category")
+  @Mapping(target = "cantidad", source = "amount")
+  @Mapping(target = "fecha", source = "date")
+  @Mapping(target = "descripcion", source = "description")
+  @Mapping(target = "fechaCreacion", ignore = true)
+  Gasto toDomain(ExpenseUpdate expense);
 }
